# notifications_sprint_1

./: .gitignore  README.md
.github/workflows/: workflow.yml
delivery_api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
delivery_api/src/: .env_example  main.py
delivery_api/src/api/v1/: notification_endpoints.py
delivery_api/src/core/settings/: core_settings.py  delivery_settings.py  message_api_settings.py  template_settings.py  user_service_settings.py
delivery_api/src/dependencies/: delivery_dependencies.py  message_api_dependecies.py  notification_dependecies.py  template_dependencies.py
delivery_api/src/models/: event.py  message.py  notification.py  user.py
delivery_api/src/services/delivery/: __init__.py  base_delivery_service.py  debug_delivery_service.py  email_delivery_service.py
delivery_api/src/services/message/: base_message_service.py  endpoint_message_service.py
delivery_api/src/services/notification/: notification_service.py
delivery_api/src/services/template/: base_template_service.py
delivery_api/src/services/user/: __init__.py  auth_user_service.py  base_user_service.py  debug_user_service.py
notification_api/: .dockerignore  README.md  pyproject.toml  requirements.txt
notification_api/src/: .env_example  main.py
notification_api/src/api/v1/: notification_endpoints.py
notification_api/src/core/: settings.py
notification_api/src/core/settings/: core_settings.py  notification_settings.py  template_settings.py
notification_api/src/dependencies/: notifications_dependencies.py  user_storage_dependencies.py
notification_api/src/models/: event.py  notification.py
notification_api/src/services/: base_notification_service.py  user_service.py
notification_api/src/services/delivery/: base_delivery_service.py  debug_delivery_service.py  email_delivery_service.py
notification_api/src/services/notification/: __init__.py  base_notification_service.py  debug_notification_service.py  email_notification_service.py  notification_service.py  sms_notification_service.py
notification_api/src/services/template/: base_template_service.py  endpoint_template_service.py
notification_api/src/services/user/: __init__.py  auth_user_service.py  base_user_service.py  db_user_service.py  debug_user_service.py
planner/: README.md  docker-compose.yml  requirements.txt
planner/dags/: birthday_notification_dag.py
planner/dags/operators/: birthday_check_operator.py  send_notifications.py
planner/dags/operators/models/: event.py
rabbit_consumer/: Dockerfile  docker-compose.yml  requirements.txt
rabbit_consumer/src/: main.py
rabbit_consumer/src/core/: settings.py
rabbit_consumer/src/models/: event.py
rabbit_consumer/src/modules/: exporter.py  rabbit.py
template_service/: .gitignore  README.md  docker-compose.yml  env.sample  pyproject.toml
template_service/nginx/: Dockerfile  nginx.conf
template_service/src/: Dockerfile  main.py
template_service/src/api/v1/: message.py  template.py
template_service/src/core/: config.py  logger.py
template_service/src/db/: orm.py
template_service/src/models/: message.py  template.py  user.py
template_service/src/services/: extractor.py  message.py  template.py
template_service/tests/: Dockerfile
template_service/tests/functional/: conftest.py  settings.py
template_service/tests/functional/src/: test_databases.py  test_template_crud.py
template_service/tests/functional/utils/: extract.py  models.py
