[tool.poetry]
name = "delivery_api"
version = "0.1.0"
description = ""
authors = ["dimk00z"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.72.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.0"
orjson = "^3.6.5"
aiosmtplib = "^1.1.6"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
mypy = "^0.931"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
profile="black"
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
known_first_party="delivery_api,core,db,routes,settings,services,testdata"
