[tool.poetry]
name = "notification_api"
version = "0.1.0"
description = ""
authors = ["dimk00z"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.72.0"
httpx = "^0.21.3"
gunicorn = "^20.1.0"
uvicorn = "^0.17.0"
orjson = "^3.6.5"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
mypy = "^0.931"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
profile="black"
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
known_first_party="notification_api,core,db,routes,settings,services,testdata"
