[tool.poetry]
name = "msfitter"
version = "0.1.0"
description = ""
authors = ["Sergey Simenshteyn <simenshteyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.72.0"
sqlmodel = "^0.0.6"
aioredis = "^2.0.1"
gunicorn = "^20.1.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
orjson = "^3.6.5"
Faker = "^11.3.0"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
isort = "^5.10.1"
aiohttp = "^3.8.1"
redis = "^4.1.1"
pytest-asyncio = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
profile="black"
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
known_first_party="api,core,db,routes,settings,services,testdata"